# lab_1

./: .gitignore  CMakeLists.txt  main.cpp  person.cpp  person.h  person_keeper.cpp  person_keeper.h  stack.h
